--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock-paper-scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <script src="script.js"></script>
+<body class="container">
+    <div class="header">Rock Paper Scissors</div>
+    <div class="gameArea">
+        <div class="score">
+            <div class="computer score"></div>
+            <div class="player score"></div>
+        </div>
+        <div class="buttons">
+            <div class="button-1">
+                <img src="image/rock.jpg" width="180pt" height="180pt">
+                <div>Rock</div>
+            </div>
+            <div class="button-2">
+                <img src="image/paper.jpg" width="180pt" height="180pt">
+                <div>Paper</div>
+            </div>
+            <div class="button-3">
+                <img src="image/scissors.jpg" width="180pt" height="180pt">
+                <div>Scissors</div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js" defer></script>
 </body> 
 </html>
