--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-paper-scissors</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body class="container">
     <div class="header">Rock Paper Scissors</div>
     <div class="gameArea">
         <div class="score">
-            <div class="computer score"></div>
-            <div class="player score"></div>
+            <div class="computer-score"></div>
+            <div class="player-score"></div>
+            <div class="total-matches"></div>
+        </div>
+        <div class="decisions">
+            <div class="pulls">
+                <div class="compSelec"></div>
+                <div class="playerSelec"></div>
+            </div>
+            <div class="decider"></div>
         </div>
         <div class="buttons">
             <div class="button-1">
@@ -28,6 +37,5 @@
             </div>
         </div>
     </div>
-    <script src="script.js" defer></script>
 </body> 
 </html>
